--- a/my_dimension/assets/css/main.css
+++ b/my_dimension/assets/css/main.css
@@ -56,3 +56,30 @@
         @-ms-viewport {
             width: device-width;
         }
+
+        @media screen and (max-width: 480px) {
+
+    		html, body {
+    			min-width: 320px;
+    		}
+
+    	}
+
+    	body {
+    		background: #1b1f22;
+    	}
+
+    		body.is-loading *, body.is-loading *:before, body.is-loading *:after, body.is-switching *, body.is-switching *:before, body.is-switching *:after {
+    			-moz-animation: none !important;
+    			-webkit-animation: none !important;
+    			-ms-animation: none !important;
+    			animation: none !important;
+    			-moz-transition: none !important;
+    			-webkit-transition: none !important;
+    			-ms-transition: none !important;
+    			transition: none !important;
+    			-moz-transition-delay: none !important;
+    			-webkit-transition-delay: none !important;
+    			-ms-transition-delay: none !important;
+    			transition-delay: none !important;
+    		}
