--- a/my_dimension/assets/css/main.css
+++ b/my_dimension/assets/css/main.css
@@ -548,3 +548,134 @@
 		color: rgba(255, 255, 255, 0.5) !important;
 		opacity: 1.0;
 	}
+
+/* Box */
+
+	.box {
+		border-radius: 4px;
+		border: solid 1px #ffffff;
+		margin-bottom: 2rem;
+		padding: 1.5em;
+	}
+
+    .box > :last-child,
+    .box > :last-child > :last-child,
+    .box > :last-child > :last-child > :last-child {
+    	margin-bottom: 0;
+    }
+
+    .box.alt {
+    	border: 0;
+    	border-radius: 0;
+    	padding: 0;
+    }
+
+/* Icon */
+
+	.icon {
+		text-decoration: none;
+		border-bottom: none;
+		position: relative;
+	}
+
+	.icon:before {
+		-moz-osx-font-smoothing: grayscale;
+		-webkit-font-smoothing: antialiased;
+		font-family: FontAwesome;
+		font-style: normal;
+		font-weight: normal;
+		text-transform: none !important;
+	}
+
+	.icon > .label {
+		display: none;
+	}
+
+
+/* Image */
+
+	.image {
+		border-radius: 4px;
+		border: 0;
+		display: inline-block;
+		position: relative;
+	}
+
+	.image:before {
+		-moz-pointer-events: none;
+		-webkit-pointer-events: none;
+		-ms-pointer-events: none;
+		pointer-events: none;
+		background-image: url("../../images/overlay.png");
+		background-color: rgba(19, 21, 25, 0.5);
+		border-radius: 4px;
+		content: '';
+		display: block;
+		height: 100%;
+		left: 0;
+		opacity: 0.5;
+		position: absolute;
+		top: 0;
+		width: 100%;
+	}
+
+	.image img {
+		border-radius: 4px;
+		display: block;
+	}
+
+	.image.left, .image.right {
+		max-width: 40%;
+	}
+
+		.image.left img, .image.right img {
+			width: 100%;
+		}
+
+	.image.left {
+		float: left;
+		padding: 0 1.5em 1em 0;
+		top: 0.25em;
+	}
+
+	.image.right {
+		float: right;
+		padding: 0 0 1em 1.5em;
+		top: 0.25em;
+	}
+
+	.image.fit {
+		display: block;
+		margin: 0 0 2rem 0;
+		width: 100%;
+	}
+
+	.image.fit img {
+		width: 100%;
+	}
+
+	.image.main {
+		display: block;
+		margin: 2.5rem 0;
+		width: 100%;
+	}
+
+	.image.main img {
+		width: 100%;
+	}
+
+    @media screen and (max-width: 736px) {
+
+    	.image.main {
+    		margin: 2rem 0;
+    	}
+
+    }
+
+    @media screen and (max-width: 480px) {
+
+    	.image.main {
+    		margin: 1.5rem 0;
+    	}
+
+    }
